add spread regularization

--- a/tests/profile_fitting.ipynb
+++ b/tests/profile_fitting.ipynb
@@ -66,12 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13c86228-ed31-43ad-852c-91377d20a717",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-11-17T16:05:51.928608Z",
-     "iopub.status.busy": "2021-11-17T16:05:51.928498Z"
+     "iopub.status.busy": "2021-11-17T16:05:51.928498Z",
+     "iopub.status.idle": "2021-11-17T16:08:25.573287Z",
+     "shell.execute_reply": "2021-11-17T16:08:25.572366Z",
+     "shell.execute_reply.started": "2021-11-17T16:05:51.928590Z"
     },
     "tags": []
    },
@@ -412,7 +415,34 @@
       "Step 1521: loss=196.8151 at Wed Nov 17 08:08:11 2021\n",
       "Step 1531: loss=196.8027 at Wed Nov 17 08:08:12 2021\n",
       "Step 1541: loss=196.7828 at Wed Nov 17 08:08:12 2021\n",
-      "Step 1551: loss=196.7672 at Wed Nov 17 08:08:13 2021\n"
+      "Step 1551: loss=196.7672 at Wed Nov 17 08:08:13 2021\n",
+      "Step 1561: loss=196.7549 at Wed Nov 17 08:08:13 2021\n",
+      "Step 1571: loss=196.7465 at Wed Nov 17 08:08:14 2021\n",
+      "Step 1581: loss=196.7385 at Wed Nov 17 08:08:14 2021\n",
+      "Step 1591: loss=196.7264 at Wed Nov 17 08:08:14 2021\n",
+      "Step 1601: loss=196.7191 at Wed Nov 17 08:08:15 2021\n",
+      "Step 1611: loss=196.7104 at Wed Nov 17 08:08:15 2021\n",
+      "Step 1621: loss=196.6995 at Wed Nov 17 08:08:16 2021\n",
+      "Step 1631: loss=196.6922 at Wed Nov 17 08:08:16 2021\n",
+      "Step 1641: loss=196.6839 at Wed Nov 17 08:08:17 2021\n",
+      "Step 1651: loss=196.677 at Wed Nov 17 08:08:17 2021\n",
+      "Step 1661: loss=196.6701 at Wed Nov 17 08:08:18 2021\n",
+      "Step 1671: loss=196.6642 at Wed Nov 17 08:08:18 2021\n",
+      "Step 1681: loss=196.659 at Wed Nov 17 08:08:19 2021\n",
+      "Step 1691: loss=196.6539 at Wed Nov 17 08:08:19 2021\n",
+      "Step 1701: loss=196.6502 at Wed Nov 17 08:08:20 2021\n",
+      "Step 1711: loss=196.647 at Wed Nov 17 08:08:20 2021\n",
+      "Step 1721: loss=196.6436 at Wed Nov 17 08:08:21 2021\n",
+      "Step 1731: loss=196.6419 at Wed Nov 17 08:08:21 2021\n",
+      "Step 1741: loss=196.6394 at Wed Nov 17 08:08:22 2021\n",
+      "Step 1751: loss=196.638 at Wed Nov 17 08:08:22 2021\n",
+      "Step 1761: loss=196.6366 at Wed Nov 17 08:08:23 2021\n",
+      "Step 1771: loss=196.6353 at Wed Nov 17 08:08:23 2021\n",
+      "Step 1781: loss=196.6343 at Wed Nov 17 08:08:24 2021\n",
+      "Step 1791: loss=196.6331 at Wed Nov 17 08:08:24 2021\n",
+      "Step 1801: loss=196.6321 at Wed Nov 17 08:08:25 2021\n",
+      "Optimization done at Wed Nov 17 08:08:25 2021.\n",
+      "Loss is 196.632\n"
      ]
     }
    ],
@@ -432,12 +462,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3dc9ac1e-7736-4a43-9ad2-581d2c83faa3",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-17T16:08:25.578752Z",
+     "iopub.status.busy": "2021-11-17T16:08:25.578503Z",
+     "iopub.status.idle": "2021-11-17T16:08:25.629029Z",
+     "shell.execute_reply": "2021-11-17T16:08:25.628481Z",
+     "shell.execute_reply.started": "2021-11-17T16:08:25.578725Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed Nov 17 08:08:25 2021    pstats\n",
+      "\n",
+      "         10110272 function calls (10100509 primitive calls) in 153.629 seconds\n",
+      "\n",
+      "   Ordered by: internal time\n",
+      "   List reduced from 1310 to 25 due to restriction <25>\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "     4289   26.745    0.006   50.052    0.012 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/compressed.py:365(multiply)\n",
+      "     8581   16.187    0.002   16.187    0.002 {built-in method scipy.sparse._sparsetools.coo_tocsr}\n",
+      "458345/458321   12.586    0.000   12.601    0.000 {built-in method numpy.array}\n",
+      "   102167   12.295    0.000   12.295    0.000 {method 'reduce' of 'numpy.ufunc' objects}\n",
+      "     8578   10.706    0.001   18.211    0.002 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/construct.py:403(_compressed_sparse_stack)\n",
+      "     4307   10.374    0.002   10.374    0.002 {method 'nonzero' of 'numpy.ndarray' objects}\n",
+      "     4289    8.280    0.002    8.280    0.002 {built-in method scipy.sparse._sparsetools.expandptr}\n",
+      "     4289    8.161    0.002    8.161    0.002 {built-in method builtins.divmod}\n",
+      "     4289    7.276    0.002  136.087    0.032 /home/jbloom/polyclonal/polyclonal/polyclonal.py:1382(_compute_pv)\n",
+      "258870/258767    6.607    0.000    7.168    0.000 {built-in method numpy.core._multiarray_umath.implement_array_function}\n",
+      "     4289    6.159    0.001  149.977    0.035 /home/jbloom/polyclonal/polyclonal/polyclonal.py:1152(_loss_reg)\n",
+      "     4289    3.756    0.001    3.756    0.001 {built-in method scipy.sparse._sparsetools.csr_matvec}\n",
+      "    12870    3.680    0.000   38.772    0.003 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/coo.py:126(__init__)\n",
+      "     4289    2.537    0.001    2.537    0.001 {method 'outer' of 'numpy.ufunc' objects}\n",
+      "     8578    1.818    0.000    1.818    0.000 /home/jbloom/polyclonal/polyclonal/polyclonal.py:981(_scaled_pseudo_huber)\n",
+      "     4289    1.764    0.000   15.157    0.004 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/coo.py:198(reshape)\n",
+      "    12940    1.706    0.000    1.706    0.000 {method 'reshape' of 'numpy.ndarray' objects}\n",
+      "     4289    1.510    0.000  143.353    0.033 /home/jbloom/polyclonal/polyclonal/polyclonal.py:1021(_loss_dloss)\n",
+      "     4289    1.353    0.000    1.353    0.000 {built-in method scipy.sparse._sparsetools.csr_matvecs}\n",
+      "     4292    1.188    0.000    1.188    0.000 {built-in method scipy.sparse._sparsetools.csr_has_canonical_format}\n",
+      "        2    1.164    0.582  151.986   75.993 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/optimize/lbfgsb.py:210(_minimize_lbfgsb)\n",
+      "    30032    0.436    0.000    1.161    0.000 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/compressed.py:136(check_format)\n",
+      "    94379    0.430    0.000    1.197    0.000 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/sputils.py:131(get_index_dtype)\n",
+      "    12870    0.351    0.000   15.055    0.001 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/scipy/sparse/coo.py:265(_check)\n",
+      "   188758    0.284    0.000    0.284    0.000 /fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/numpy/core/getlimits.py:498(__init__)\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pstats.Stats at 0x7fd1066d51c0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pstats\n",
     "\n",
