--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -26,11 +26,17 @@
     "We also regularize the $\\beta_{m,e}$ values based on the notions:\n",
     "\n",
     " 1. Most mutations should not mediate escape,\n",
-    " 2. When a site is involved in escape, most mutations at a site will have similar-ish effects.\n",
+    " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
     "\n",
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
-    "$$R_{\\rm{escape}} = \\sum_{m,e} h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right)$$"
+    "$$R_{\\rm{escape}} = \\lambda_{\\rm{escape}} \\sum_{m,e} h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right)$$\n",
+    "where $\\lambda_{\\rm{escape}}$ is the strength of the regularization and $\\delta_{\\rm{escape}}$ is the Psdeuo-Huber delta parameter.\n",
+    "\n",
+    "### Regularization of spread of escape values at each site and epitope\n",
+    "We regularize the variance of the escape values at each site, so that\n",
+    "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
+    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$."
    ]
   },
   {
@@ -125,16 +131,17 @@
     "\n",
     "#### Calculating $\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}} = \\frac{\\beta_{m,e}}{h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right) + \\delta_{\\rm{escape}}} $$"
+    "$$\\frac{\\partial R_{\\rm{site\\, escape}}}{\\partial \\beta_{m,e}} = \\frac{\\lambda_{\\rm{escape}}\\beta_{m,e}}{h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right) + \\delta_{\\rm{escape}}} $$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a21586f5-9802-446b-9e57-030352c0af09",
+   "cell_type": "markdown",
+   "id": "99c9e3ab-505d-4fc3-9f66-11e064e031f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}}$\n",
+    "$$\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}} = \\frac{2\\lambda_{\\rm{spread}}}{M_i} \\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)\\frac{M_i - 1}{M_i}$$"
+   ]
   }
  ],
  "metadata": {
