--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -5,6 +5,29 @@
    "id": "eee2a908-c776-4836-9acf-81b001a1ab69",
    "metadata": {},
    "source": [
+    "# Details on fitting\n",
+    "Here we describe how the `polyclonal` package actually fits the models.\n",
+    "\n",
+    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers.\n",
+    "In addition, by default there is regularization:\n",
+    "\n",
+    " 1. The mutation escape values $\\beta_{m,e}$ to capture the idea that most mutations should not mediate escape at most sites.\n",
+    " 2. The spread on mutation escape values at each site to capture the idea that different mutations at the same site should have similar-ish effects on escape.\n",
+    "\n",
+    "## Implementation\n",
+    "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
+    "By default the optimization uses the gradient-based L-BFGS-B method implemented in [scipy.optimize.minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html) and simply continues optimization until the minimization converges.\n",
+    "\n",
+    "Two key details about the fitting are as follows:\n",
+    "\n",
+    " 1. By default, the fitting first fits a \"site-level\" model in which all mutations are lumped together so there are just two characters (wildtype and mutant). The escape values from this initial site-level fitting are then used to initialize the full mutation-level escape values which are then further optimized. The idea is that first fitting a simpler model with less parameters helps get the parameters into a \"reasonable\" space before full model optimization. This option is implemented via the `fit_site_level_first` parameter to `Polyclonal.fit`, and it is recommended to use this approach as testing indicates it helps.\n",
+    " \n",
+    " 2. By default, if there are multiple variants with the same mutations, they are \"collapsed\" to a single variant that is then given a weight proportional to the number of constituent variants that is used when calculating the loss. This option is implemented by default via `collapse_identical_variants` during the initialization of a `Polyclonal` object, and is probably useful as it seems to speed up fitting without (usually) substantially changing the fitting results.\n",
+    " \n",
+    "The `Polyclonal.fit` also allows you to adjust the weights on the regularizations.\n",
+    "The default should be sensible, but you may want to try adjusting them about.\n",
+    "You can also adjust the $\\delta$ values for the [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss / regularization terms (see below), although the defaults are probably pretty good for these as they are chosen to be L1-like on most the range that values are expected to span.\n",
+    "\n",
     "## Loss function\n",
     "\n",
     "We use a scaled [Pseudo-Huber](https://en.wikipedia.org/wiki/Huber_loss#Pseudo-Huber_loss_function) loss function on the difference between the predicted and measure escape proabilities.\n",
@@ -45,6 +68,7 @@
    "metadata": {},
    "source": [
     "## Gradients used for optimization\n",
+    "Here are the formulas used to calculate the gradients in the optimization.\n",
     "\n",
     "### Gradient of loss function\n",
     "For the loss function, the gradients are as follows:\n",
