add IC90s to simulations and fitting tests

--- a/notebooks/simulate_RBD.ipynb
+++ b/notebooks/simulate_RBD.ipynb
@@ -18,11 +18,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:01.355934Z",
-     "iopub.status.busy": "2021-11-13T21:56:01.355449Z",
-     "iopub.status.idle": "2021-11-13T21:56:02.772312Z",
-     "shell.execute_reply": "2021-11-13T21:56:02.771810Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:01.355624Z"
+     "iopub.execute_input": "2021-11-19T22:25:18.398192Z",
+     "iopub.status.busy": "2021-11-19T22:25:18.397971Z",
+     "iopub.status.idle": "2021-11-19T22:25:19.643886Z",
+     "shell.execute_reply": "2021-11-19T22:25:19.643256Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:18.398136Z"
     },
     "tags": []
    },
@@ -71,11 +71,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:02.775333Z",
-     "iopub.status.busy": "2021-11-13T21:56:02.775106Z",
-     "iopub.status.idle": "2021-11-13T21:56:18.421522Z",
-     "shell.execute_reply": "2021-11-13T21:56:18.420945Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:02.775313Z"
+     "iopub.execute_input": "2021-11-19T22:25:19.644796Z",
+     "iopub.status.busy": "2021-11-19T22:25:19.644647Z",
+     "iopub.status.idle": "2021-11-19T22:25:35.459564Z",
+     "shell.execute_reply": "2021-11-19T22:25:35.458832Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:19.644776Z"
     },
     "tags": []
    },
@@ -126,11 +126,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:18.425353Z",
-     "iopub.status.busy": "2021-11-13T21:56:18.425142Z",
-     "iopub.status.idle": "2021-11-13T21:56:19.551231Z",
-     "shell.execute_reply": "2021-11-13T21:56:19.550413Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:18.425337Z"
+     "iopub.execute_input": "2021-11-19T22:25:35.461047Z",
+     "iopub.status.busy": "2021-11-19T22:25:35.460782Z",
+     "iopub.status.idle": "2021-11-19T22:25:36.648727Z",
+     "shell.execute_reply": "2021-11-19T22:25:36.648049Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:35.461028Z"
     },
     "tags": []
    },
@@ -166,11 +166,11 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:19.556298Z",
-     "iopub.status.busy": "2021-11-13T21:56:19.555717Z",
-     "iopub.status.idle": "2021-11-13T21:56:21.052791Z",
-     "shell.execute_reply": "2021-11-13T21:56:21.052254Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:19.556251Z"
+     "iopub.execute_input": "2021-11-19T22:25:36.650326Z",
+     "iopub.status.busy": "2021-11-19T22:25:36.650054Z",
+     "iopub.status.idle": "2021-11-19T22:25:38.187845Z",
+     "shell.execute_reply": "2021-11-19T22:25:38.187291Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:36.650303Z"
     },
     "tags": []
    },
@@ -204,11 +204,11 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:21.055539Z",
-     "iopub.status.busy": "2021-11-13T21:56:21.055349Z",
-     "iopub.status.idle": "2021-11-13T21:56:21.489827Z",
-     "shell.execute_reply": "2021-11-13T21:56:21.489202Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:21.055522Z"
+     "iopub.execute_input": "2021-11-19T22:25:38.189009Z",
+     "iopub.status.busy": "2021-11-19T22:25:38.188807Z",
+     "iopub.status.idle": "2021-11-19T22:25:38.627092Z",
+     "shell.execute_reply": "2021-11-19T22:25:38.626439Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:38.188990Z"
     },
     "tags": []
    },
@@ -383,11 +383,11 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:21.492863Z",
-     "iopub.status.busy": "2021-11-13T21:56:21.492714Z",
-     "iopub.status.idle": "2021-11-13T21:56:26.090769Z",
-     "shell.execute_reply": "2021-11-13T21:56:26.089954Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:21.492843Z"
+     "iopub.execute_input": "2021-11-19T22:25:38.628457Z",
+     "iopub.status.busy": "2021-11-19T22:25:38.628229Z",
+     "iopub.status.idle": "2021-11-19T22:25:43.421363Z",
+     "shell.execute_reply": "2021-11-19T22:25:43.420810Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:38.628438Z"
     },
     "tags": []
    },
@@ -586,11 +586,11 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:26.093806Z",
-     "iopub.status.busy": "2021-11-13T21:56:26.093680Z",
-     "iopub.status.idle": "2021-11-13T21:56:45.082149Z",
-     "shell.execute_reply": "2021-11-13T21:56:45.081469Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:26.093790Z"
+     "iopub.execute_input": "2021-11-19T22:25:43.422791Z",
+     "iopub.status.busy": "2021-11-19T22:25:43.422507Z",
+     "iopub.status.idle": "2021-11-19T22:26:02.634338Z",
+     "shell.execute_reply": "2021-11-19T22:26:02.633247Z",
+     "shell.execute_reply.started": "2021-11-19T22:25:43.422772Z"
     },
     "tags": []
    },
@@ -637,11 +637,11 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:45.085607Z",
-     "iopub.status.busy": "2021-11-13T21:56:45.085397Z",
-     "iopub.status.idle": "2021-11-13T21:56:45.128757Z",
-     "shell.execute_reply": "2021-11-13T21:56:45.128109Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:45.085584Z"
+     "iopub.execute_input": "2021-11-19T22:26:02.636703Z",
+     "iopub.status.busy": "2021-11-19T22:26:02.636352Z",
+     "iopub.status.idle": "2021-11-19T22:26:02.681683Z",
+     "shell.execute_reply": "2021-11-19T22:26:02.681120Z",
+     "shell.execute_reply.started": "2021-11-19T22:26:02.636651Z"
     },
     "tags": []
    },
@@ -839,11 +839,11 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:45.131525Z",
-     "iopub.status.busy": "2021-11-13T21:56:45.131390Z",
-     "iopub.status.idle": "2021-11-13T21:56:47.262213Z",
-     "shell.execute_reply": "2021-11-13T21:56:47.261363Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:45.131508Z"
+     "iopub.execute_input": "2021-11-19T22:26:02.682676Z",
+     "iopub.status.busy": "2021-11-19T22:26:02.682437Z",
+     "iopub.status.idle": "2021-11-19T22:26:04.658544Z",
+     "shell.execute_reply": "2021-11-19T22:26:04.657948Z",
+     "shell.execute_reply.started": "2021-11-19T22:26:02.682656Z"
     },
     "tags": []
    },
@@ -1025,6 +1025,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For both the exact and noisy data frames, we will also compute the IC90 for each variant based on the simulated antibody mix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-19T22:26:04.659548Z",
+     "iopub.status.busy": "2021-11-19T22:26:04.659311Z",
+     "iopub.status.idle": "2021-11-19T22:26:31.375145Z",
+     "shell.execute_reply": "2021-11-19T22:26:31.374672Z",
+     "shell.execute_reply.started": "2021-11-19T22:26:04.659529Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>library</th>\n",
+       "      <th>aa_substitutions</th>\n",
+       "      <th>concentration</th>\n",
+       "      <th>prob_escape</th>\n",
+       "      <th>IC90</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td></td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.166783</td>\n",
+       "      <td>0.112813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td></td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.054978</td>\n",
+       "      <td>0.112813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td></td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.059157</td>\n",
+       "      <td>0.112813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td></td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.031918</td>\n",
+       "      <td>0.112813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td></td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.128836</td>\n",
+       "      <td>0.112813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719995</th>\n",
+       "      <td>avg2muts</td>\n",
+       "      <td>Y473E L518F D427L</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.002918</td>\n",
+       "      <td>1.159910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719996</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td>Y473S G413Q</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.577999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719997</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td>Y473V P479R F392W</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.160248</td>\n",
+       "      <td>1.454528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719998</th>\n",
+       "      <td>avg3muts</td>\n",
+       "      <td>Y489Q N501Y</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.588084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719999</th>\n",
+       "      <td>avg2muts</td>\n",
+       "      <td>Y505N H519T</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.350485</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>720000 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         library   aa_substitutions  concentration  prob_escape      IC90\n",
+       "0       avg1muts                             0.125     0.166783  0.112813\n",
+       "1       avg1muts                             0.125     0.054978  0.112813\n",
+       "2       avg1muts                             0.125     0.059157  0.112813\n",
+       "3       avg1muts                             0.125     0.031918  0.112813\n",
+       "4       avg1muts                             0.125     0.128836  0.112813\n",
+       "...          ...                ...            ...          ...       ...\n",
+       "719995  avg2muts  Y473E L518F D427L          4.000     0.002918  1.159910\n",
+       "719996  avg1muts        Y473S G413Q          4.000     0.000000  0.577999\n",
+       "719997  avg1muts  Y473V P479R F392W          4.000     0.160248  1.454528\n",
+       "719998  avg3muts        Y489Q N501Y          4.000     0.000000  0.588084\n",
+       "719999  avg2muts        Y505N H519T          4.000     0.000000  0.350485\n",
+       "\n",
+       "[720000 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variants_escape = poly_abs.icXX(variants_escape, x=0.9, col='IC90')\n",
+    "\n",
+    "noisy_variants_escape = poly_abs.icXX(noisy_variants_escape, x=0.9, col='IC90')\n",
+    "\n",
+    "noisy_variants_escape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We will write these data frames giving the variants $v$ and their probabilities of escape $p_v\\left(c\\right)$ at each serum concentration $c$ to CSV files:\n",
     "\n",
     " - [RBD_variants_escape_exact.csv](RBD_variants_escape_exact.csv) for the measurements without noise\n",
@@ -1035,14 +1208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-13T21:56:47.263649Z",
-     "iopub.status.busy": "2021-11-13T21:56:47.263130Z",
-     "iopub.status.idle": "2021-11-13T21:56:51.746719Z",
-     "shell.execute_reply": "2021-11-13T21:56:51.745755Z",
-     "shell.execute_reply.started": "2021-11-13T21:56:47.263629Z"
+     "iopub.execute_input": "2021-11-19T22:26:31.376436Z",
+     "iopub.status.busy": "2021-11-19T22:26:31.376183Z",
+     "iopub.status.idle": "2021-11-19T22:26:37.145818Z",
+     "shell.execute_reply": "2021-11-19T22:26:37.144922Z",
+     "shell.execute_reply.started": "2021-11-19T22:26:31.376411Z"
     },
     "tags": []
    },
@@ -1050,6 +1223,7 @@
    "source": [
     "variants_escape.to_csv('RBD_variants_escape_exact.csv',\n",
     "                       index=False, float_format='%.4g')\n",
+    "\n",
     "noisy_variants_escape.to_csv('RBD_variants_escape_noisy.csv',\n",
     "                             index=False, float_format='%.4g')"
    ]
