--- a/biophysical_model.ipynb
+++ b/biophysical_model.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Biophysical model\n",
-    "Here we describe the biophysical model that motivates the modeling in this package.\n",
+    "Here we describe the biophysical model of polyclonal antibodies that motivates the approach in this package.\n",
+    "\n",
+    "## Model\n",
     "\n",
     "Consider a viral protein bound by polyclonal antibodies, such as might be found in sera.\n",
     "We want to determine the contribution of each mutation to escaping these polyclonal antibodies, being cognizant of the fact that different antibodies target different epitopes.\n",
@@ -54,6 +56,17 @@
     "where $b\\left(v\\right)_m$ is one if variant $v$ has mutation $m$ and 0 otherwise.\n",
     "\n",
     "These equations relate the quantities of biological interest ($a_{\\rm{wt}, e}$ and $\\beta_{m,e}$) to the experimental measurables ($p_v\\left(c\\right)$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IC50s from the model\n",
+    "After we have fit the model parameters (activities and mutation escape values) to the experimental measurables (variant-level escape probabilities at different concentrations), for each variant we can calculate a $IC_{50}$ (or more generally, an $IC_x$), which is the concentration of the polyclonal antibody mix where 50% (or x%, in the more general case) of that particular variant is neutralized.\n",
+    "\n",
+    "To do this, we just solve for the $c$ such that $p_v\\left(c\\right) = 1 - x$ where $x$ is the fraction neutralized, so $x = 0.5$ for an $IC_{50}$.\n",
+    "Because $p_v\\left(c\\right)$ is a monotonically increasing function of $c$, this will have a unique solution that we determine numerically."
    ]
   }
  ],
